[package]
name = "vinolite"
version = "0.1.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
homepage = "https://github.com/krypt0nn/vinolite"
repository = "https://github.com/krypt0nn/vinolite"
license = "GPL-3.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "s"
lto = "fat"

[dependencies]
anyhow = "1.0"
ratatui = "0.29"
rusqlite = { version = "0.34", features = ["bundled"] }
